syntax = "proto3";

package keyhub.console.v1;

import "buf/validate/validate.proto";
import "google/protobuf/timestamp.proto";
import "keyhub/console/v1/common.proto";

service ConsoleService {
  // Tenant作成
  rpc CreateTenant(CreateTenantRequest) returns (CreateTenantResponse);
  // Tenant一覧取得
  rpc GetAllTenants(GetAllTenantsRequest) returns (GetAllTenantsResponse);
  // IDからTenant取得
  rpc GetTenantById(GetTenantByIdRequest) returns (GetTenantByIdResponse);
  // Tenant編集
  rpc UpdateTenant(UpdateTenantRequest) returns (UpdateTenantResponse);
}

message CreateTenantRequest {
  string name = 1;
  string description = 2;
  TenantType tenant_type = 3;
  string join_code = 4;
  google.protobuf.Timestamp join_code_expiry = 5;
  int32 join_code_max_use = 6;
}

message CreateTenantResponse {
  string id = 1 [(buf.validate.field).string.uuid = true];
}

message GetAllTenantsRequest {}

message GetAllTenantsResponse {
  repeated Tenant tenants = 1;
}

message GetTenantByIdRequest {
  string id = 1 [(buf.validate.field).string.uuid = true];
}
message GetTenantByIdResponse {
  Tenant tenant = 1;
  string join_code = 2;
  google.protobuf.Timestamp join_code_expiry = 3;
  int32 join_code_max_use = 4;
}

message UpdateTenantRequest {
  string id = 1 [(buf.validate.field).string.uuid = true];
  string name = 2;
  string description = 3;
  TenantType tenant_type = 4;
  string join_code = 5;
  google.protobuf.Timestamp join_code_expiry = 6;
  int32 join_code_max_use = 7;
}

message UpdateTenantResponse {}
